--- a/css/main.css
+++ b/css/main.css
@@ -5,17 +5,23 @@ html {
 }
 
 main {
+  max-width: 600rem;
+  margin: 0 auto;
+}
+
+article {
   border: 4px solid #fff;
 }
+
 .white-text {
   color: #fff;
 }
 
-.archivo {
+.allcaps {
   font-family: "Archivo Black", sans-serif;
   color: #a3a692;
 }
 
 .fade {
-  transition: all 1s ease;
+  transition: opacity 5s ease-in;
 }
