Change text colour

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   font-family: "Archivo Black", sans-serif;
   font-family: 'Pompiere', sans-serif;
-  background-color: #142740;
+  background-color: #223F5E;
 }
 
 main {
@@ -20,7 +20,7 @@ article {
 
 .allcaps {
   font-family: "Archivo Black", sans-serif;
-  color: #a1a692;
+  color: #aaa692;
 }
 
 .opac {
