--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,12 @@
 html {
   font-family: "Archivo Black", sans-serif;
-  font-family: 'Pompiere', sans-serif;
-  background-color: #223F5E;
+  font-family: Pompiere, sans-serif;
+  background-color: #223f5e;
 }
 
 main {
   max-width: 20rem;
   margin: 0 auto;
-
 }
 
 article {
@@ -25,14 +24,13 @@ article {
 
 .opac {
   transition: all 1000ms ease-in;
-  opacity: 0.2;
+  opacity: .2;
 }
 
 @media only screen and (min-width: 60em) {
 
-.opac:hover {
-
-  opacity: .8;
-}
+  .opac:hover {
+    opacity: .8;
+  }
 
 }
